dataset1235/2025-2/2318198438/users/1301535012/executions/1897677159_2667036473.log
== SUBMISSION (2025-08-21 01:06:09)
-- CODE: 
celsius = float(input("celsius: "))
kelvin = celsius + 273.15
print(round(kelvin,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:06:06)
-- CODE: 
celsius = float(input("celsius: "))
kelvin = celsius + 273.15
print(round(kelvin,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round(kelvin,2)))
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:36)
-- CODE: 
celsius = float(input("celsius: "))
kelvin = celsius + 273.15
print(round(kelvin(kelvin,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin(kelvin,2)))
                ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin(kelvin,2)))
                ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin(kelvin,2)))
                ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin(kelvin,2)))
                ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin(kelvin,2)))
                ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin(kelvin,2)))
                ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:06:37)
-- CODE: 
celsius = float(input("celsius: "))
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:06:23)
-- CODE: 
celsius = float(input("celsius: "))
kelvin = celsius + 273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
